--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a class="navbar-item" href="/">
           <h2 class="subtitle is-size-3 is-uppercase has-text-black">Creative Producer</h2>
         </a>
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar-main">
+        <a role="button" class="navbar-burger has-text-white" aria-label="menu" aria-expanded="false" data-target="navbar-main">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
@@ -44,16 +44,16 @@
       </div>
       <div id="navbar-main" class="navbar-menu">
         <div class="navbar-end">
-          <a class="navbar-item is-uppercase is-size-4">
+          <a class="navbar-item is-uppercase is-size-4 has-text-white">
             Über
           </a>
-          <a class="navbar-item is-uppercase is-size-4">
+          <a class="navbar-item is-uppercase is-size-4 has-text-white">
             Filme
           </a>
-          <a class="navbar-item is-uppercase is-size-4">
+          <a class="navbar-item is-uppercase is-size-4 has-text-white">
             Fotografie
           </a>
-          <a class="navbar-item is-uppercase is-size-4">
+          <a class="navbar-item is-uppercase is-size-4 has-text-white">
             Kontakt
           </a>
         </div>
