--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
       </div>
       <div id="navbar-main" class="navbar-menu">
         <div class="navbar-end">
-          <a href="about.html" class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a class="navbar-item is-uppercase is-size-4 has-text-white">
             Über
           </a>
           <a class="navbar-item is-uppercase is-size-4 has-text-white">
@@ -59,9 +59,13 @@
         </div>
       </div>
     </nav>
-    <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-beach">
-      <div class="hero-head"></div>
-      <div class="hero-body"></div>
+    <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer">
+      <div class="hero-body">
+        <h3 class="title is-size-3 is-uppercase has-text-weight-normal">Über</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+      </div>
       <div class="hero-foot"></div>
     </section>
     <nav class="navbar has-background-black is-fixed-bottom" role="navigation" aria-label="main navigation">
