--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <span aria-hidden="true"></span>
         </a>
       </div>
-      <div id="navbar-main" class="navbar-menu">
+      <div id="navbar-main" class="navbar-menu is-hidden-touch">
         <div class="navbar-end">
           <a href="about.html" class="navbar-item is-uppercase is-size-4 has-text-white">
             Über
@@ -59,7 +59,7 @@
         </div>
       </div>
     </nav>
-    <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-beach">
+    <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-two-surfers">
       <div class="hero-head"></div>
       <div class="hero-body"></div>
       <div class="hero-foot"></div>
