--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Oliver Bolt</title>
+    <title>Oliver Bolt - Über</title>
     <link rel="stylesheet" href="css/main.css">
     <script defer src="node_modules/@fortawesome/fontawesome-free/js/brands.js"></script>
     <script defer src="node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"></script>
@@ -44,10 +44,10 @@
       </div>
       <div id="navbar-main" class="navbar-menu is-hidden-touch">
         <div class="navbar-end">
-          <a class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a href="about.html" class="navbar-item is-uppercase is-size-4 has-text-white">
             Über
           </a>
-          <a class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a href="movies.html" class="navbar-item is-uppercase is-size-4 has-text-white">
             Filme
           </a>
           <a class="navbar-item is-uppercase is-size-4 has-text-white">
@@ -101,7 +101,7 @@
         </dl>
         
         <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">
-          <a href="CV.pdf">&raquo; Download Full CV</a>
+          <a href="CV.pdf" class="download">Download Full CV</a>
         </h3>
       </div>
       <div class="hero-foot"></div>
