--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="about.html" class="navbar-item is-uppercase is-size-4 has-text-white">
             Über
           </a>
-          <a class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a href="movies.html" class="navbar-item is-uppercase is-size-4 has-text-white">
             Filme
           </a>
           <a class="navbar-item is-uppercase is-size-4 has-text-white">
