--- a/movies.html
+++ b/movies.html
@@ -12,7 +12,7 @@
   <body>
     <div class="navbar has-background-black is-flex">
       <div class="navbar-brand">
-        <a class="navbar-item" href="/">
+        <a class="navbar-item" href="index.html">
           <h1 class="title is-size-2 is-uppercase has-text-weight-bold has-text-white">Oliver Bolt</h1>
         </a>
       </div>
