--- a/movies.html
+++ b/movies.html
@@ -50,9 +50,9 @@
           <a href="movies.html" class="navbar-item is-uppercase is-size-4 has-text-white">
             Filme
           </a>
-          <a class="navbar-item is-uppercase is-size-4 has-text-white">
+          <!--<a class="navbar-item is-uppercase is-size-4 has-text-white">
             Fotografie
-          </a>
+          </a>-->
           <a class="navbar-item is-uppercase is-size-4 has-text-white">
             Kontakt
           </a>
