Linked CV to PDF

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
         </dl>
 
         <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">
-          <a href="CV.pdf" class="download">Download Full CV</a>
+          <a href="assets/CV_Bolt-Oliver.pdf" class="download" target="_blank">Download Full CV</a>
         </h3>
       </div>
       <div class="hero-foot"></div>
