--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
       </div>
       <div class="navbar-menu is-hidden-desktop is-flex-touch">
         <div class="navbar-end is-flex-touch is-justify-content-flex-end">
-          <a class="navbar-item is-flex-touch has-text-white">
+          <a href="https://www.instagram.com/ollie.bolt/" target="_blank" class="navbar-item is-flex-touch has-text-white">
             <span class="icon">
               <i class="fab fa-instagram"></i>
             </span>
           </a>
-          <a class="navbar-item is-flex-touch has-text-white">
+          <a href="https://www.facebook.com/oliver.bolt" target="_blank" class="navbar-item is-flex-touch has-text-white">
             <span class="icon">
               <i class="fab fa-facebook"></i>
             </span>
@@ -59,7 +59,7 @@
         </div>
       </div>
     </nav>
-    <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer">
+    <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer is-navbar-aligned">
       <div class="hero-body">
         <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">Über</h3>
         <p class="has-text-white">
@@ -105,12 +105,12 @@
     <nav class="navbar has-background-black is-fixed-bottom" role="navigation" aria-label="main navigation">
       <div class="navbar-menu">
         <div class="navbar-end">
-          <a class="navbar-item has-text-white">
+          <a href="https://www.instagram.com/ollie.bolt/" target="_blank" class="navbar-item has-text-white">
             <span class="icon">
               <i class="fab fa-instagram"></i>
             </span>
           </a>
-          <a class="navbar-item has-text-white">
+          <a href="https://www.facebook.com/oliver.bolt" target="_blank" class="navbar-item has-text-white">
             <span class="icon">
               <i class="fab fa-facebook"></i>
             </span>
