--- a/about.html
+++ b/about.html
@@ -63,42 +63,54 @@
       <div class="hero-body">
         <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">Über</h3>
         <p class="has-text-white">
-          Creative Producer – Dienstleistung - Leidenschaft bewegtes Bild – Erfahrung in vielen Bereichen - deshalb gute Übersicht und Know-How,
-          um Projekte gut aufzugleisen – vom Skript to Production – technisches und inhaltliches Verständnis vereint – Erfahrung in
-          Projektbudgetierung – von der Vision zum fertigen Film – Projektleitung / Planung / Koordination – Herausforderungen anpacken und kreative
-          Lösungen finden  – Kommunikation mit Gewerken / Departments – damit am Schluss ein tolles Resultat da steht und die Budgetvorgaben einhält –
-          die besten und schönsten Bilder auf dem Schnittplatz liegen – in der Ruhe liegt die Kraft – gutes Bauchgefühl.
+          Ciao zäme! Ich bin Oliver, ein Creative Producer aus St. Gallen.
         </p>
 
         <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">Aktuell</h3>
         <p class="has-text-white">
-          Aktuell seit anfang 2017 bei SRF als Produktionleiter. Betreue in erster Linie die neue Docufiction-Reihe «Es geschah am…».
+          Aktuell arbeite ich als Produktionsleiter beim Schweizer Radio und Fernsehen SRF. Seit 2019 betreue in erster Linie die Docudrama-Reihe «Es geschah am…».
         </p>
 
         <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">Lebensweg</h3>
         <dl class="has-text-white timeline">
-          <dt>since 2019</dt>
-          <dd>Produktionsleiter bei SRF</dd>
+          <dt>since 2017</dt>
+          <dd>Produktionsleiter beim Schweizer Radio und Fernsehen SRF</dd>
 
-          <dt>2013 - 2015</dt>
+          <dt>2016 - 2017</dt>
           <dd>Focal Stage als Produktionsleitung bei Spielfilm «Der Unschuldige» von Simon Jaquemet (8 horses, Augenschein)</dd>
 
-          <dt>2011 - 2013</dt>
+          <dt>2016</dt>
           <dd>Produktionsleitung Kurzfilm «Zwischenstopp» von Cosima Frei (2:1 Film GmbH)</dd>
 
-          <dt>2009 - 2011</dt>
+          <dt>2015 - 2016</dt>
           <dd>Produktion / Redaktion / VJ bei Halsundbeinbruch Film GmbH</dd>
 
-          <dt>2008 - 2009</dt>
+          <dt>2015</dt>
+          <dd>Aufnahmeleitung Episodenfilm «Peripherie» - Episode Wendy Pillonel (ZHdK)</dd>
+
+          <dt>2014 - 2015</dt>
           <dd>Praktikum im Bereich Content Production bei Habegger AG</dd>
 
-          <dt>2004 - 2008</dt>
+          <dt>2014</dt>
+          <dd>Statistenkoordinator Fernsehfilm «Vaterjagd» von Rahel Grunder (SRF, atlantis pictures)</dd>
+
+          <dt>2010 – 2013</dt>
           <dd>Bachelor in Multimedia Production an der HTW Chur und HdM Stuttgart (Schwerpunkt: Video und Film)</dd>
         </dl>
 
-        <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">
-          <a href="assets/CV_Bolt-Oliver.pdf" class="download" target="_blank">Download Full CV</a>
-        </h3>
+        <ul class="is-flex is-flex-direction-row is-justify-content-space-between">
+          <li>
+            <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">
+              <a href="assets/CV_Bolt-Oliver.pdf" class="bold" target="_blank">Download Full CV</a>
+            </h3>
+          </li>
+
+          <li>
+            <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">
+              <a href="movies.html" class="bold">Filmographie</a>
+            </h3>
+          </li>
+        </ul>
       </div>
       <div class="hero-foot"></div>
     </section>
