Fixed Facebook Link

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
               <i class="fab fa-instagram"></i>
             </span>
           </a>
-          <a href="https://www.facebook.com/oliver.bolt" target="_blank" class="navbar-item is-flex-touch has-text-white">
+          <a href="https://www.facebook.com/oliver.bolt1" target="_blank" class="navbar-item is-flex-touch has-text-white">
             <span class="icon">
               <i class="fab fa-facebook"></i>
             </span>
@@ -122,7 +122,7 @@
               <i class="fab fa-instagram"></i>
             </span>
           </a>
-          <a href="https://www.facebook.com/oliver.bolt" target="_blank" class="navbar-item has-text-white">
+          <a href="https://www.facebook.com/oliver.bolt1" target="_blank" class="navbar-item has-text-white">
             <span class="icon">
               <i class="fab fa-facebook"></i>
             </span>
