--- a/movies.html
+++ b/movies.html
@@ -62,13 +62,13 @@
     <section class="hero is-fullheight-with-navbar-twice has-background-black">
       <div class="hero-head"></div>
       <div class="hero-body movies">
-        <h3 class="title">Es geschah am...</h3>
-        <h4 class="subtitle">SRF | Dokudrama-Reihe</h4>
+        <h3 class="title">Es geschah am…</h3>
+        <h4 class="subtitle">SRF Dokudrama-Serie</h4>
 
         <div class="card">
           <div class="card-image">
             <figure class="image">
-              <iframe class="is-16by9" src="https://www.youtube-nocookie.com/embed/dXb8Is5MCpg" title="Es geschah am... - Das Attentat von Zug" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class="is-16by9" src="https://www.youtube.com/embed/KX_q4kdor4o?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </figure>
           </div>
           <div class="card-content">
@@ -81,16 +81,19 @@
             <div class="content">
               <dl class="has-text-white meta">
                 <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
+                <dd>Produktionsleitung</dd>
 
                 <dt>Regie</dt>
                 <dd>Daniel von Aarburg</dd>
 
                 <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
+                <dd>René Schönenberger</dd>
+
+                <dt>Schnitt</dt>
+                <dd>Nicole Hussy</dd>
 
                 <dt>Produzent</dt>
-                <dd>Rolf Elsener | SRF | 2021</dd>
+                <dd>Rolf Elsener | 2020</dd>
               </dl>
             </div>
           </div>
@@ -99,7 +102,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image">
-              <iframe class="is-16by9" src="https://www.youtube-nocookie.com/embed/2UA_1VJhnxc" title="Es geschah am... - Bis dass der Tod euch scheidet" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class="is-16by9" src="https://www.youtube.com/embed/2UA_1VJhnxc?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </figure>
           </div>
           <div class="card-content">
@@ -118,10 +121,13 @@
                 <dd>Wendy Pillonel</dd>
 
                 <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
+                <dd>René Schönenberger</dd>
+
+                <dt>Schnitt</dt>
+                <dd>Nicole Hussy</dd>
 
                 <dt>Produzent</dt>
-                <dd>Rolf Elsener | SRF | 2019/20</dd>
+                <dd>Rolf Elsener | 2020</dd>
               </dl>
             </div>
           </div>
@@ -130,7 +136,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image">
-              <iframe class="is-16by9" src="https://www.youtube-nocookie.com/embed/qGmp8-0eHoI" title="Es geschah am... - Der Postraub des Jahrhunders" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class="is-16by9" src="https://www.youtube.com/embed/qGmp8-0eHoI?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </figure>
           </div>
           <div class="card-content">
@@ -149,10 +155,47 @@
                 <dd>Wendy Pillonel</dd>
 
                 <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
+                <dd>René Schönenberger</dd>
+
+                <dt>Schnitt</dt>
+                <dd>Nicole Hussy</dd>
 
                 <dt>Produzent</dt>
-                <dd>Rolf Elsener | SRF | 2019/20</dd>
+                <dd>Rolf Elsener | 2019</dd>
+              </dl>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <iframe class="is-16by9" src="https://www.srf.ch/play/embed?urn=urn:srf:video:0d1ac273-8f18-4de4-90d2- 5949f0a6e1af&subdivisions=false" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <h5 class="title is-4">Der Postraub des Jahrhunderts <small>Folge 1</small></h5>
+              </div>
+            </div>
+
+            <div class="content">
+              <dl class="has-text-white meta">
+                <dt>Funktion</dt>
+                <dd>Produktionsleitung</dd>
+
+                <dt>Regie</dt>
+                <dd>Marc Schippert</dd>
+
+                <dt>Kamera</dt>
+                <dd>René Schönenberger</dd>
+
+                <dt>Schnitt</dt>
+                <dd>Nicole Hussy</dd>
+
+                <dt>Produzent</dt>
+                <dd>Rolf Elsener | 2019</dd>
               </dl>
             </div>
           </div>
