Inhalt von Filme überarbeitet

--- a/movies.html
+++ b/movies.html
@@ -170,7 +170,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image">
-              <iframe class="is-16by9" src="https://www.srf.ch/play/embed?urn=urn:srf:video:0d1ac273-8f18-4de4-90d2- 5949f0a6e1af&subdivisions=false" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
+              <iframe class="is-16by9" src="https://www.youtube.com/embed/qGmp8-0eHoI?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </figure>
           </div>
           <div class="card-content">
@@ -201,308 +201,94 @@
           </div>
         </div>
 
-        <div class="card">
-          <div class="card-image">
-            <figure class="image">
-              <iframe class="is-16by9" src="https://www.youtube-nocookie.com/embed/W2QhRmhA1yg" title="Es geschah am... - Der Geisterzug von Spiez" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </figure>
-          </div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <h5 class="title is-4">Der Geisterzug von Spiez <small>Folge 1</small></h5>
-              </div>
-            </div>
-
-            <div class="content">
-              <dl class="has-text-white meta">
-                <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
-
-                <dt>Regie</dt>
-                <dd>Marc Schippert</dd>
-
-                <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
-
-                <dt>Produzent</dt>
-                <dd>Rolf Elsener| SRF | 2019</dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
-        <h3 class="title">Meine fremde Heimat</h3>
-        <h4 class="subtitle">SRF | Reality TV Format</h4>
-
-        <div class="card">
-          <div class="card-image">
-            <figure class="image">
-              <iframe class="is-16by9" src="https://srf.ch/play/embed?urn=urn:srf:video:54ac3af0-a7a1-4651-b232-7774fc55f1bf" title="Meine fremde Heimat - Brasilien" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
-            </figure>
-          </div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <h5 class="title is-4">Brasilien <small>Folge 1</small></h5>
-              </div>
-            </div>
-
-            <div class="content">
-              <dl class="has-text-white meta">
-                <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
-
-                <dt>Regie</dt>
-                <dd>Marc Schippert</dd>
-
-                <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
-
-                <dt>Produzent</dt>
-                <dd>Katrin Blum| SRF | 2019</dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <figure class="image">
-              <iframe class="is-16by9" src="https://srf.ch/play/embed?urn=urn:srf:video:cee6db9d-073d-4a61-8511-337cb66a2bdf" title="Meine fremde Heimat - Sri Lanka" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
-            </figure>
-          </div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <h5 class="title is-4">Sri Lanka <small>Folge 1</small></h5>
-              </div>
-            </div>
-
-            <div class="content">
-              <dl class="has-text-white meta">
-                <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
-
-                <dt>Regie</dt>
-                <dd>Marc Schippert</dd>
-
-                <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
-
-                <dt>Produzent</dt>
-                <dd>Katrin Blum| SRF | 2019</dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
-        <h3 class="title">Hütten Geschichten</h3>
-        <h4 class="subtitle">SRF | Reality TV Format <small>Alle Folgen von Staffel 7 bis 10 (2017 - 2020)</small></h4>
-
-        <div class="card">
-          <div class="card-image">
-            <figure class="image">
-              <iframe class="is-16by9" src="https://srf.ch/play/embed?urn=urn:srf:video:32ee94c8-e2ae-48ae-b990-a396014ba928" title="Hüttengeschichten - Es schneielet, es beielet!" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
-            </figure>
-          </div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <h5 class="title is-4">Es schneielet, es beielet! <small>Staffel 10, Folge 5</small></h5>
-              </div>
-            </div>
-
-            <div class="content">
-              <dl class="has-text-white meta">
-                <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
-
-                <dt>Regie</dt>
-                <dd>Marc Schippert</dd>
-
-                <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
-
-                <dt>Produzent</dt>
-                <dd>Katrin Blum| SRF | 2019</dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <figure class="image">
-              <iframe class="is-16by9" src="https://srf.ch/play/embed?urn=urn:srf:video:f1b3801e-dc5e-4fc3-831b-632956443b65" title="Hüttengeschichten - Es wird geklettert" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
-            </figure>
-          </div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <h5 class="title is-4">Es wird geklettert <small>Staffel 9, Folge 4</small></h5>
-              </div>
-            </div>
-
-            <div class="content">
-              <dl class="has-text-white meta">
-                <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
-
-                <dt>Regie</dt>
-                <dd>Marc Schippert</dd>
-
-                <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
-
-                <dt>Produzent</dt>
-                <dd>Katrin Blum| SRF | 2019</dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <figure class="image">
-              <iframe class="is-16by9" src="https://srf.ch/play/embed?urn=urn:srf:video:5bce4c09-9436-4ee3-97cc-a39f0d6256b4" title="Hüttengeschichten - Hüttenwart und Rettungsspezialist" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
-            </figure>
-          </div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <h5 class="title is-4">Hüttenwart und Rettungsspezialist <small>Staffel 8, Folge 2</small></h5>
-              </div>
-            </div>
-
-            <div class="content">
-              <dl class="has-text-white meta">
-                <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
-
-                <dt>Regie</dt>
-                <dd>Marc Schippert</dd>
-
-                <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
-
-                <dt>Produzent</dt>
-                <dd>Katrin Blum| SRF | 2019</dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <figure class="image">
-              <iframe class="is-16by9" src="https://srf.ch/play/embed?urn=urn:srf:video:54b3fc76-6049-4ed3-8aa8-6ef90cb0558e" title="Hüttengeschichten - Herausforderungen im Hüttenalltag" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
-            </figure>
-          </div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <h5 class="title is-4">Herausforderungen im Hüttenalltag <small>Staffel 7, Folge 3</small></h5>
-              </div>
-            </div>
-
-            <div class="content">
-              <dl class="has-text-white meta">
-                <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
-
-                <dt>Regie</dt>
-                <dd>Marc Schippert</dd>
-
-                <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
-
-                <dt>Produzent</dt>
-                <dd>Katrin Blum| SRF | 2019</dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
         <h3 class="title">Der Unschuldige</h3>
-        <h4 class="subtitle">8 horses | Simon Jaquemet</h4>
+        <h4 class="subtitle">Spielfilm</h4>
 
         <div class="card">
           <div class="card-image">
             <figure class="image">
-              <iframe class="is-16by9" src="https://www.youtube.com/embed/YsKOsGF90gA" title="Der Unschuldige" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class="is-16by9" src="https://player.vimeo.com/video/289874675?h=c0006d5fb9&title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe>
             </figure>
           </div>
           <div class="card-content">
             <div class="content">
               <dl class="has-text-white meta">
                 <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
+                <dd>Produktionsleitung Focal Stage</dd>
 
                 <dt>Regie</dt>
-                <dd>Marc Schippert</dd>
+                <dd>Simon Jaquemet</dd>
 
                 <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
+                <dd>Gabriel Sandru</dd>
+
+                <dt>Schnitt</dt>
+                <dd>Christof Schertenleib</dd>
 
                 <dt>Produzent</dt>
-                <dd>Katrin Blum| SRF | 2019</dd>
+                <dd>8horses | Augenschein | 2018</dd>
               </dl>
             </div>
           </div>
         </div>
 
         <h3 class="title">Zwischenstopp</h3>
-        <h4 class="subtitle">2:1 Film - ZHdK | Cosima Frei</h4>
+        <h4 class="subtitle">Kurzfilm</h4>
 
         <div class="card">
           <div class="card-image">
             <figure class="image">
-              <iframe class="is-16by9" src="https://player.vimeo.com/video/219877427?title=0&byline=0&portrait=0" title="Zwischenstopp" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+              <iframe class="is-16by9" src="https://player.vimeo.com/video/219877427?h=04c073922e&title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe>
             </figure>
           </div>
           <div class="card-content">
             <div class="content">
               <dl class="has-text-white meta">
                 <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
+                <dd>Aufnahmeleitung</dd>
 
                 <dt>Regie</dt>
-                <dd>Marc Schippert</dd>
+                <dd>Cosima Frei</dd>
 
                 <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
+                <dd>Valentino Vigniti</dd>
+
+                <dt>Schnitt</dt>
+                <dd>Mirjam Zimmermann</dd>
 
                 <dt>Produzent</dt>
-                <dd>Katrin Blum| SRF | 2019</dd>
+                <dd>2:1 Film | 2017</dd>
               </dl>
             </div>
           </div>
         </div>
 
         <h3 class="title">Peripherie</h3>
-        <h4 class="subtitle">2:1 Film - ZHdK | Diverse</h4>
+        <h4 class="subtitle">Episoden-Spielfilm</h4>
 
         <div class="card">
           <div class="card-image">
             <figure class="image">
-              <iframe class="is-16by9" src="https://www.youtube-nocookie.com/embed/MfBfu_OqXsU" title="Peripherie Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class="is-16by9" src="https://player.vimeo.com/video/181904697?h=7bb682a7c7&title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe>
             </figure>
           </div>
           <div class="card-content">
             <div class="content">
               <dl class="has-text-white meta">
                 <dt>Funktion</dt>
-                <dd>Produktionsleiter</dd>
+                <dd>Aufnahmeleitung Episode Wendy Pillonel</dd>
 
                 <dt>Regie</dt>
-                <dd>Marc Schippert</dd>
+                <dd>Lisa Brühlmann | Wendy Pillonel | Jan-Eric Mack | Luca Ribler | Yasmin Yoerg</dd>
 
                 <dt>Kamera</dt>
-                <dd>René Schonenberger</dd>
+                <dd>Lukas Graf</dd>
+
+                <dt>Schnitt</dt>
+                <dd>Fleur Matson</dd>
 
                 <dt>Produzent</dt>
-                <dd>Katrin Blum| SRF | 2019</dd>
+                <dd>Zürcher Hochschule der Künste ZHdK | 2016</dd>
               </dl>
             </div>
           </div>
