--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
           <dd>Produktionsleiter beim Schweizer Radio und Fernsehen SRF</dd>
 
           <dt>2016 - 2017</dt>
-          <dd>Focal Stage als Produktionsleitung bei Spielfilm «Der Unschuldige» von Simon Jaquemet (8 horses, Augenschein)</dd>
+          <dd>Focal-Stage Prod.leitung bei «Der Unschuldige» von Simon Jaquemet (8 horses)</dd>
 
           <dt>2016</dt>
           <dd>Produktionsleitung Kurzfilm «Zwischenstopp» von Cosima Frei (2:1 Film GmbH)</dd>
@@ -85,16 +85,19 @@
           <dd>Produktion / Redaktion / VJ bei Halsundbeinbruch Film GmbH</dd>
 
           <dt>2015</dt>
-          <dd>Aufnahmeleitung Episodenfilm «Peripherie» - Episode Wendy Pillonel (ZHdK)</dd>
+          <dd>Aufnahmeleitung bei «Peripherie» ¬¬  Episode von Wendy Pillonel (ZHdK)</dd>
 
           <dt>2014 - 2015</dt>
           <dd>Praktikum im Bereich Content Production bei Habegger AG</dd>
 
           <dt>2014</dt>
-          <dd>Statistenkoordinator Fernsehfilm «Vaterjagd» von Rahel Grunder (SRF, atlantis pictures)</dd>
+          <dd>Statistenkoordinator bei «Vaterjagd» von Rahel Grunder (SRF | atlantis pictures)</dd>
 
           <dt>2010 – 2013</dt>
-          <dd>Bachelor in Multimedia Production an der HTW Chur und HdM Stuttgart (Schwerpunkt: Video und Film)</dd>
+          <dd>Bachelor in Multimedia Production an der HTW Chur (Major TV / Film)</dd>
+
+          <dt>2012 – 2013</dt>
+          <dd>Erasmus-Semester an der HdM Stuttgart (Studioproduktion Film)</dd>
         </dl>
 
         <ul class="is-flex is-flex-direction-row is-justify-content-space-between">
