Font adjustments in header

--- a/movies.html
+++ b/movies.html
@@ -13,7 +13,7 @@
     <div class="navbar has-background-black is-flex">
       <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
-          <h1 class="title is-size-2 is-uppercase has-text-weight-bold has-text-white">Oliver Bolt</h1>
+          <h1 class="title is-uppercase has-text-weight-bold has-text-white">Oliver Bolt</h1>
         </a>
       </div>
       <div class="navbar-menu is-hidden-desktop is-flex-touch">
@@ -34,7 +34,7 @@
     <nav class="navbar is-transparent is-absolute" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="/">
-          <h2 class="subtitle is-size-3 is-uppercase has-text-white">Creative Producer</h2>
+          <h2 class="subtitle is-uppercase has-text-white">Creative Producer</h2>
         </a>
         <a role="button" class="navbar-burger has-text-white" aria-label="menu" aria-expanded="false" data-target="navbar-main">
           <span aria-hidden="true"></span>
