--- a/about.html
+++ b/about.html
@@ -79,10 +79,10 @@
           <dd>Focal-Stage Prod.leitung bei «Der Unschuldige» von Simon Jaquemet (8 horses)</dd>
 
           <dt>2016</dt>
-          <dd>Produktionsleitung Kurzfilm «Zwischenstopp» von Cosima Frei (2:1 Film GmbH)</dd>
+          <dd>Produktionsleitung Kurzfilm «Zwischenstopp» von Cosima Frei (2:1 Film)</dd>
 
           <dt>2015 - 2016</dt>
-          <dd>Produktion / Redaktion / VJ bei Halsundbeinbruch Film GmbH</dd>
+          <dd>Produktion / Redaktion / VJ bei Halsundbeinbruch Film</dd>
 
           <dt>2015</dt>
           <dd>Aufnahmeleitung bei «Peripherie» ¬¬  Episode von Wendy Pillonel (ZHdK)</dd>
