Anpassung Text Filmlegenden

--- a/movies.html
+++ b/movies.html
@@ -62,9 +62,6 @@
     <section class="hero is-fullheight-with-navbar-twice has-background-black">
       <div class="hero-head"></div>
       <div class="hero-body movies">
-        <h3 class="title">Es geschah am…</h3>
-        <h4 class="subtitle">SRF Dokudrama-Serie</h4>
-
         <div class="card">
           <div class="card-image">
             <figure class="image">
@@ -74,7 +71,8 @@
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <h5 class="title is-4">Das Attentat von Zug <small>Folge 4</small></h5>
+                <h4 class="has-text-white">Das Attentat von Zug <small>Folge 4</small></h4>
+                <h5 class="title is-4">SRF Dokudrama-Serie | Es geschah am…</h5>
               </div>
             </div>
 
