--- a/movies.html
+++ b/movies.html
@@ -62,6 +62,8 @@
     <section class="hero is-fullheight-with-navbar-twice has-background-black">
       <div class="hero-head"></div>
       <div class="hero-body movies">
+
+        
         <div class="card">
           <div class="card-image">
             <figure class="image">
@@ -72,7 +74,7 @@
             <div class="media">
               <div class="media-content">
                 <h4 class="has-text-white">Das Attentat von Zug <small>Folge 4</small></h4>
-                <h5 class="title is-4">SRF Dokudrama-Serie | Es geschah am…</h5>
+                <h5 class="title is-4">Dokudrama-Serie «Es geschah am...» | SRF | 2021 | 100 min</h5>
               </div>
             </div>
 
@@ -91,7 +93,7 @@
                 <dd>Nicole Hussy</dd>
 
                 <dt>Produzent</dt>
-                <dd>Rolf Elsener | 2020</dd>
+                <dd>Rolf Elsener</dd>
               </dl>
             </div>
           </div>
