Anpassungen Legenden Film

--- a/movies.html
+++ b/movies.html
@@ -108,7 +108,44 @@
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <h5 class="title is-4">Bis dass der Tod euch scheidet <small>Folge 3</small></h5>
+                <h4 class="has-text-white">Bis dass der Tod uns scheidet <small>Folge 3</small></h4>
+                <h5 class="title is-4">Dokudrama-Serie «Es geschah am...» | SRF | 2020 | 91 min</h5>
+              </div>
+            </div>
+
+
+            <div class="content">
+              <dl class="has-text-white meta">
+                <dt>Funktion</dt>
+                <dd>Produktionsleitung</dd>
+
+                <dt>Regie</dt>
+                <dd>Wendy Pillonel</dd>
+
+                <dt>Kamera</dt>
+                <dd>René Schönenberger</dd>
+
+                <dt>Schnitt</dt>
+                <dd>Nicole Hussy</dd>
+
+                <dt>Produzent</dt>
+                <dd>Rolf Elsener</dd>
+              </dl>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <iframe class="is-16by9" src="https://www.youtube.com/embed/qGmp8-0eHoI?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <h4 class="has-text-white">Der Postraub des Jahrhunderts <small>Folge 2</small></h4>
+                <h5 class="title is-4">Dokudrama-Serie «Es geschah am...» | SRF | 2020 | 99 min</h5>
               </div>
             </div>
 
@@ -127,7 +164,7 @@
                 <dd>Nicole Hussy</dd>
 
                 <dt>Produzent</dt>
-                <dd>Rolf Elsener | 2020</dd>
+                <dd>Rolf Elsener</dd>
               </dl>
             </div>
           </div>
@@ -142,41 +179,8 @@
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <h5 class="title is-4">Der Postraub des Jahrhunderts <small>Folge 2</small></h5>
-              </div>
-            </div>
-
-            <div class="content">
-              <dl class="has-text-white meta">
-                <dt>Funktion</dt>
-                <dd>Produktionsleitung</dd>
-
-                <dt>Regie</dt>
-                <dd>Wendy Pillonel</dd>
-
-                <dt>Kamera</dt>
-                <dd>René Schönenberger</dd>
-
-                <dt>Schnitt</dt>
-                <dd>Nicole Hussy</dd>
-
-                <dt>Produzent</dt>
-                <dd>Rolf Elsener | 2019</dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <figure class="image">
-              <iframe class="is-16by9" src="https://www.youtube.com/embed/qGmp8-0eHoI?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </figure>
-          </div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <h5 class="title is-4">Der Postraub des Jahrhunderts <small>Folge 1</small></h5>
+                <h4 class="has-text-white">Der Geisterzug von Spiez <small>Folge 1</small></h4>
+                <h5 class="title is-4">Dokudrama-Serie «Es geschah am...» | SRF | 2019 | 107 min</h5>
               </div>
             </div>
 
@@ -195,7 +199,7 @@
                 <dd>Nicole Hussy</dd>
 
                 <dt>Produzent</dt>
-                <dd>Rolf Elsener | 2019</dd>
+                <dd>Rolf Elsener</dd>
               </dl>
             </div>
           </div>
