Anpassungen Legenden Filme

--- a/movies.html
+++ b/movies.html
@@ -205,8 +205,6 @@
           </div>
         </div>
 
-        <h3 class="title">Der Unschuldige</h3>
-        <h4 class="subtitle">Spielfilm</h4>
 
         <div class="card">
           <div class="card-image">
@@ -215,10 +213,18 @@
             </figure>
           </div>
           <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <h4 class="has-text-white">Der Unschuldige</h4>
+                <h5 class="title is-4">Spielfilm | 8horses | Augenschein | 2018 | 114 min</h5>
+              </div>
+            </div>
+
+
             <div class="content">
               <dl class="has-text-white meta">
                 <dt>Funktion</dt>
-                <dd>Produktionsleitung Focal Stage</dd>
+                <dd>Focal Stage Produktionsleitung</dd>
 
                 <dt>Regie</dt>
                 <dd>Simon Jaquemet</dd>
@@ -229,15 +235,13 @@
                 <dt>Schnitt</dt>
                 <dd>Christof Schertenleib</dd>
 
-                <dt>Produzent</dt>
-                <dd>8horses | Augenschein | 2018</dd>
+                <dt>Produzenten</dt>
+                <dd>Tolga Dilsiz, Aurelius Eisenreich, Jonas Katzenstein, Maximilian Leo</dd>
               </dl>
             </div>
           </div>
         </div>
 
-        <h3 class="title">Zwischenstopp</h3>
-        <h4 class="subtitle">Kurzfilm</h4>
 
         <div class="card">
           <div class="card-image">
@@ -245,7 +249,15 @@
               <iframe class="is-16by9" src="https://player.vimeo.com/video/219877427?h=04c073922e&title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe>
             </figure>
           </div>
+
           <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <h4 class="has-text-white">Zwischenstopp</h4>
+                <h5 class="title is-4">Kurzfilm | 2:1 Film | ZHdK | 2017 | 18 min</h5>
+              </div>
+            </div>
+
             <div class="content">
               <dl class="has-text-white meta">
                 <dt>Funktion</dt>
@@ -260,15 +272,13 @@
                 <dt>Schnitt</dt>
                 <dd>Mirjam Zimmermann</dd>
 
-                <dt>Produzent</dt>
-                <dd>2:1 Film | 2017</dd>
+                <dt>Produzentin</dt>
+                <dd>Rhea Plangg</dd>
               </dl>
             </div>
           </div>
         </div>
 
-        <h3 class="title">Peripherie</h3>
-        <h4 class="subtitle">Episoden-Spielfilm</h4>
 
         <div class="card">
           <div class="card-image">
@@ -276,7 +286,17 @@
               <iframe class="is-16by9" src="https://player.vimeo.com/video/181904697?h=7bb682a7c7&title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe>
             </figure>
           </div>
+
           <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <h4 class="has-text-white"><Peripherie></h4>
+                <h5 class="title is-4">Episoden-Spielfilm | ZHdK | 2016 | 82 min</h5>
+              </div>
+            </div>
+
+
+
             <div class="content">
               <dl class="has-text-white meta">
                 <dt>Funktion</dt>
@@ -292,7 +312,7 @@
                 <dd>Fleur Matson</dd>
 
                 <dt>Produzent</dt>
-                <dd>Zürcher Hochschule der Künste ZHdK | 2016</dd>
+                <dd>Filippo Bonacci</dd>
               </dl>
             </div>
           </div>
