--- a/movies.html
+++ b/movies.html
@@ -300,10 +300,10 @@
             <div class="content">
               <dl class="has-text-white meta">
                 <dt>Funktion</dt>
-                <dd>Aufnahmeleitung Episode Wendy Pillonel</dd>
+                <dd>Aufnahmeleitung Episode «Eddie»</dd>
 
                 <dt>Regie</dt>
-                <dd>Lisa Brühlmann | Wendy Pillonel | Jan-Eric Mack | Luca Ribler | Yasmin Yoerg</dd>
+                <dd>Wendy Pillonel</dd>
 
                 <dt>Kamera</dt>
                 <dd>Lukas Graf</dd>
