--- a/movies.html
+++ b/movies.html
@@ -290,7 +290,7 @@
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <h4 class="has-text-white"><Peripherie></h4>
+                <h4 class="has-text-white">Peripherie</h4>
                 <h5 class="title is-4">Episoden-Spielfilm | ZHdK | 2016 | 82 min</h5>
               </div>
             </div>
