--- a/movies.html
+++ b/movies.html
@@ -74,7 +74,7 @@
             <div class="media">
               <div class="media-content">
                 <h4 class="has-text-white">Das Attentat von Zug <small>Folge 4</small></h4>
-                <h5 class="title is-4">Dokudrama-Serie «Es geschah am...»  |  SRF  |  2021 |  100 min</h5>
+                <h5 class="title is-4">Dokudrama-Serie «Es geschah am...»  &nbsp;|&nbsp;&nbsp;SRF  |  2021 |  100 min</h5>
               </div>
             </div>
 
