--- a/movies.html
+++ b/movies.html
@@ -44,15 +44,18 @@
       </div>
       <div id="navbar-main" class="navbar-menu is-hidden-touch has-background-black">
         <div class="navbar-end">
-          <a href="about.html" class="navbar-item is-uppercase is-size-4 has-text-white">
-            Über
-          </a>
-          <a href="movies.html" class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a href="movies.html" class="navbar-item is-uppercase is-size-4 has-text-white is-active">
             Filme
           </a>
-          <!--<a class="navbar-item is-uppercase is-size-4 has-text-white">
-            Fotografie
-          </a>-->
+
+          <a class="navbar-item is-uppercase is-size-4 has-text-white">
+            Bilder
+          </a>
+          
+          <a href="about.html" class="navbar-item is-uppercase is-size-4 has-text-white">
+            About
+          </a>
+
           <a class="navbar-item is-uppercase is-size-4 has-text-white">
             Kontakt
           </a>
